--- a/index.html
+++ b/index.html
@@ -28,11 +28,7 @@ Select ONE Additional Feature to Add
       }
 
       .pictures {
-        border-radius: 30px;
-      }
-
-      .pictures {
-        border: 5px solid #eee0c9;
+        border-radius: 30px; border: 5px solid #eee0c9;
       }
 
       .subtitles {
@@ -46,6 +42,9 @@ Select ONE Additional Feature to Add
       #description {
         color: #8eaccd;
       }
+      
+      p {color: black}
+      
     </style>
   </head>
   <body>
